# core-frameworks

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release-plz.yml
core-media-rs/: Cargo.toml
crates/core-audio-types-rs/: CHANGELOG.md  Cargo.toml
crates/core-audio-types-rs/src/: audio_buffer.rs  audio_buffer_list.rs
crates/core-media-rs/: CHANGELOG.md  Cargo.toml
crates/core-media-rs/src/: cm_video_codec_type.rs  lib.rs
crates/core-media-rs/src/cm_block_buffer/: internal.rs  mod.rs
crates/core-media-rs/src/cm_format_description/: internal.rs
crates/core-media-rs/src/cm_sample_buffer/: error.rs  internal_attachments.rs  internal_audio.rs  internal_base.rs  internal_buffers.rs  internal_create.rs  internal_data.rs  internal_sample_buffer_attachments.rs  mod.rs
crates/core-utils-rs/: CHANGELOG.md  Cargo.toml
crates/core-utils-rs/src/: four_char_code_unchecked.rs  lib.rs  lock.rs
crates/core-video-rs/: CHANGELOG.md  Cargo.toml  build.rs
crates/core-video-rs/src/: lib.rs
crates/core-video-rs/src/constants/: mod.rs
crates/core-video-rs/src/cv_pixel_buffer/: internal_base.rs  internal_create.rs  internal_lock.rs  internal_props.rs  lock.rs  mod.rs  planar_data.rs
crates/core-video-rs/tests/: cv_pixel_buffer_lock_test.rs  cv_pixel_buffer_test.rs
