[workspace]
resolver = "2"
members = [
  "crates/core-audio-types-rs",
  "crates/core-media-rs",
  "crates/core-utils-rs",
  "crates/core-video-rs",
]


[workspace.dependencies]

core-media-rs = { path = "crates/core-media-rs" }
core-video-rs = { path = "crates/core-video-rs" }
core-audio-types-rs = { path = "crates/core-audio-types-rs" }
core-utils-rs = { path = "crates/core-utils-rs" }

# External dependencies
core-foundation = "0.10"
core-graphics = "0.24"
io-surface = "0.16"
thiserror = "1.0"
