[workspace]
resolver = "2"
members = [
  "crates/core-audio-types-rs",
  "crates/core-media-rs",
  "crates/core-utils-rs",
  "crates/core-video-rs",
]
[workspace.package]
authors = ["Per Johansson <per@doom.fisn>"]
version = "0.3.3"
edition = "2021"
repository = "https://github.com/doom-fish/core-frameworks"
homepage = "https://doom.fish"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
core-audio-types-rs = { path = "crates/core-audio-types-rs", version = "0.3.3" }
core-media-rs = { path = "crates/core-media-rs", version = "0.3.3" }
core-video-rs = { path = "crates/core-video-rs", version = "0.3.3" }
core-utils-rs = { path = "crates/core-utils-rs", version = "0.3.3" }

# External dependencies
core-foundation = "0.10"
core-graphics = "0.24"
io-surface = "0.16"
thiserror = "2.0"
