[package]
name = "core-audio-types-rs"
description = "Rust wrapper for apple's CoreAudioTypes framework"
keywords = ["screencapture", "screencapturekit", "macos"]

categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::audio",
  "os::macos-apis",
]

repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true


[dependencies]
core-foundation.workspace = true
