[package]
name = "core-media-rs"
description = "Rust wrapper for apple's CoreMedia framework"

links = "CoreMedia"

categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]

authors.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# Inter dependencies
core-video-rs = { path = "../core-video-rs" }
core-audio-types-rs = { path = "../core-audio-types-rs" }
core-utils-rs = { path = "../core-utils-rs" }

# Workspace dependencies
core-foundation.workspace = true
thiserror.workspace = true
