[package]
name = "core-media-rs"
description = "Rust wrapper for apple's CoreMedia framework"

links = "CoreMedia"

categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]

authors.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# Inter dependencies
core-video-rs.workspace = true
core-audio-types-rs.workspace = true
core-utils-rs.workspace = true

# Workspace dependencies
core-foundation.workspace = true
thiserror.workspace = true
