[package]
name = "core-utils-rs"
keywords = ["coreutils", "corevideo", "macos", "apple", "video"]
description = "Rust wrapper for apple's CoreVideo framework"
categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]

repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true


[dependencies]
core-foundation.workspace = true

# Wrapped dependencies, to be replaced with new code
four-char-code = { version = "2", default-features = false }
