[package]
name = "core-video-rs"
description = "Rust wrapper for apple's CoreVideo framework"
keywords = ["screencapture", "screencapturekit", "macos"]
categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]

links = "CoreVideo"

repository.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace dependencies
core-utils-rs.workspace = true

# External dependencies
core-foundation.workspace = true
core-graphics.workspace = true
io-surface.workspace = true
thiserror.workspace = true
